# pilflow

./: .gitignore  CONTEXT_SYSTEM.md  LICENSE  README.md  example_usage.py  pyproject.toml  run_tests.py
.github/workflows/: tests.yml
examples/: context_system_demo.py  decide_resolution_minimal.py  example_usage.py  image_pack_demo.py  producer_registration_demo.py
src/pilflow/: __init__.py
src/pilflow/contexts/: __init__.py  blur.py  resize.py  resolution.py  resolution_decision.py  sharpen.py
src/pilflow/core/: __init__.py  consumers.py  context.py  image_pack.py  operation.py  producers.py
src/pilflow/core/operation/: __init__.py  base.py  consumer.py  operation.py  producer.py
src/pilflow/operations/: __init__.py  blur.py  decide_resolution.py  resize.py  resolution.py  sharpen.py
tests/: README.md  __init__.py  conftest.py  test_integration.py
tests/core/: test_consumer.py  test_context.py  test_image_pack.py  test_operation.py  test_to_base64.py
tests/operations/: __init__.py  test_blur.py  test_decide_resolution.py  test_resize.py  test_resolution.py  test_sharpen.py
tests/test_data/: __init__.py  data_manager.py  example_usage.py
