[project]
name = "pilflow"
version = "0.1.0"
requires-python = ">=3.8"
description = "A Pillow-based image processing pipeline project."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Cheng Yanru", email = "yanru@cyanru.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics"
]
dependencies = [
    "Pillow>=6.2.1",
    "jinnang>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "requests>=2.28.0",
    "build>=1.0.0",
    "twine>=5.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"